AYS-441 | `RoleDataSource.findRoleIdByInstitutionId()` Method Has Been Used Instead of `DatabaseUtility.getRoleId()` Method